--- a/frontend/natiart-app/src/app/components/customer/top-menu/top-menu.component.html
+++ b/frontend/natiart-app/src/app/components/customer/top-menu/top-menu.component.html
@@ -1,4 +1,4 @@
-<div class="bg-[#F9EBE0] shadow-input">
+<div class="bg-primary-lighter shadow-input">
   <div class="container mx-auto px-4 py-4 sm:py-6 flex flex-col sm:flex-row justify-between items-center">
     <h1 class="text-2xl sm:text-3xl font-light tracking-wider mb-4 sm:mb-0">PORCELAIN ELEGANCE</h1>
 
