product can not have personalization

--- a/frontend/natiart-app/src/app/components/customer/customer-dashboard/customer-dashboard.component.html
+++ b/frontend/natiart-app/src/app/components/customer/customer-dashboard/customer-dashboard.component.html
@@ -144,3 +144,10 @@
     </div>
   </main>
 </div>
+
+<app-personalization-modal
+  [show]="showPersonalizationModal"
+  [product]="selectedProduct"
+  (close)="closePersonalizationModal()"
+  (personalize)="onPersonalizationComplete($event)">
+</app-personalization-modal>
