--- a/frontend/natiart-app/src/app/components/admin/admin-product-management/admin-product-management.component.html
+++ b/frontend/natiart-app/src/app/components/admin/admin-product-management/admin-product-management.component.html
@@ -103,6 +103,31 @@
             <option *ngFor="let pack of packages | async" [value]="pack.id">{{ pack.label }}</option>
           </select>
         </div>
+
+        <div class="mb-4">
+          <label class="flex items-center space-x-2">
+            <input type="checkbox" formControlName="hasGold" id="hasGold" name="hasGold"
+                   class="form-checkbox h-5 w-5 text-primary focus:ring-primary focus:ring-opacity-50">
+            <span class="text-sm font-medium text-gray-700">Has gold</span>
+          </label>
+        </div>
+
+        <div class="mb-4">
+          <label class="flex items-center space-x-2">
+            <input type="checkbox" formControlName="canPersonaliseGold" id="canPersonaliseGold" name="canPersonaliseGold"
+                   class="form-checkbox h-5 w-5 text-primary focus:ring-primary focus:ring-opacity-50">
+            <span class="text-sm font-medium text-gray-700">Can choose if there is gold or not</span>
+          </label>
+        </div>
+
+        <div class="mb-4">
+          <label class="flex items-center space-x-2">
+            <input type="checkbox" formControlName="canPersonaliseImage" id="canPersonaliseImage" name="canPersonaliseImage"
+                   class="form-checkbox h-5 w-5 text-primary focus:ring-primary focus:ring-opacity-50">
+            <span class="text-sm font-medium text-gray-700">Can personalised the image</span>
+          </label>
+        </div>
+
         <div class="mb-4">
           <label for="productImages" class="block text-sm font-medium text-gray-700 mb-1">Images</label>
           <input type="file" id="productImages" (change)="onFileSelected($event)" multiple accept="image/*"
