--- a/frontend/natiart-app/src/app/components/customer/cart-modal/cart-modal.component.html
+++ b/frontend/natiart-app/src/app/components/customer/cart-modal/cart-modal.component.html
@@ -16,6 +16,7 @@
         </div>
         <div class="flex-grow">
           <p class="font-semibold">{{ item.product.label }}</p>
+          <p *ngIf="item.goldBorder" class="mt-1 text-sm font-medium text-yellow-600">With Gold Border</p>
           <div class="flex items-center mt-1">
             <input type="number" [(ngModel)]="item.quantity" (change)="updateQuantity(item, item.quantity)"
                    class="w-16 p-1 border rounded mr-2" [min]="1" [max]="item.product.stockQuantity">
